# qbychat-vibe-coding

./: .env.example  .gitignore  API_SPEC.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.yaml
migrations/: 0001_init.sql  0003_roles_mutes.sql  0004_user_avatars.sql  0005_storage_files.sql  0006_message_attachments.sql  0007_storage_files_sha256.sql  0008_messages_reads.sql  0009_chat_members.sql  0010_chat_members_notify.sql  0011_messages_reply_users_profile.sql  0012_admin_perms_pinned.sql  0013_mentions_and_admin.sql  0014_media_forward.sql  0015_public_chats.sql  0016_add_chat_columns.sql  0017_extend_user_model.sql  0018_add_contacts.sql
src/: auth.rs  config.rs  gif.rs  lib.rs  main.rs  models.rs  state.rs  upload.rs  ws.rs
src/handlers/: admin.rs  auth.rs  chat_list.rs  chats.rs  contacts.rs  files.rs  gifs.rs  members.rs  members_notify.rs  messages.rs  mod.rs  pin.rs  stickers.rs  uploads.rs  users.rs
tests/: integration.rs
tests/api/: admin_perms.rs  admins.rs  auth.rs  avatars.rs  chat_list.rs  chats.rs  clear.rs  files.rs  forward.rs  gifs.rs  groups.rs  helpers.rs  main.rs  members.rs  mentions.rs  messages.rs  messages_rich.rs  public.rs  stickers.rs  ws.rs
