[package]
name = "qbychat-vibe-coding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
actix-web = "4"
actix-ws = "0.3.0"
futures-util = "0.3.31"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
jsonwebtoken = "9"
dashmap = "5"
redis = { version = "0.25", features = ["tokio-comp"] }
actix-multipart = "0.6"
actix-files = "0.6"
image = { version = "0.25", default-features = false, features = ["jpeg","png"] }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
regex = "1"
config = { version = "0.14", default-features = false, features = ["yaml"] }

[dev-dependencies]
tokio-tungstenite = "0.21"
wiremock = "0.6"
